fix: update z-index for portait-overlay

--- a/src/styles.css
+++ b/src/styles.css
@@ -122,7 +122,7 @@ main {
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
   padding: 20px;
-  z-index: 100;
+  z-index: 80;
   text-align: center;
   font-size: 1.2rem;
 }
